# A-Maze-ing

./: Makefile  README.md  a_maze_ing.py  config.txt  maze.txt  pyproject.toml  requirements.txt
mazegen/: MazeGenerator.py  __init__.py  generate.py  maze.py  mazegenerator.py  pattern.py  solve.py
src/: color.py  display.py  generate.py  maze.py  parse_config.py  pattern.py  solve.py
