[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generator and solver"
authors = [{name="malanos, egaudich"}]
dependencies = []
readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools]
packages = ["mazegen"]